Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/LambdaExprNotVoid.out
LambdaExprNotVoid.java:14:21: compiler.err.prob.found.req: (compiler.misc.stat.expr.expected)
LambdaExprNotVoid.java:15:21: compiler.err.prob.found.req: (compiler.misc.stat.expr.expected)
2 errors
